Add Cakeaseable project

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
             <div class="flex-1">
                 <h2 class="h1 text-center mb-2-5 mb-lg-4">A little about me</h2>
             </div>
-            <div class="flex-1 d-none d-md-block"></div>
+            <div class="flex-1 d-none d-lg-block"></div>
         </div>
         <div class="d-flex flex-column-reverse flex-lg-row column-gap-7 row-gap-2-5">
             <div class="flex-1">
