--- a/projects/cakeseable.html
+++ b/projects/cakeseable.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/src/css/style.css">
-    <title>Elsa Quintana's portfolio</title>
+    <title>Cakeseable | Elsa Quintana's portfolio</title>
 </head>
 <body class="project-cakeseable">
     <div class="navbar">
@@ -27,11 +27,11 @@
     </div>
     <header class="header">
         <div class="container">
-            <div class="d-flex align-items-center column-gap-7">
+            <div class="d-flex flex-column-reverse flex-lg-row align-items-center column-gap-7 row-gap-2-5">
                 <div class="flex-1">
-                    <h2 class="mb-1">Cakeseable App</h2>
-                    <h5 class="mb-2">Responsive app and website</h5>
-                    <p class="mb-4">Cakeseable is a pastry app designed to make it easy for users to place orders and create custom cakes in a few simple steps.</p>
+                    <h2 class="h1 mb-0 mb-lg-1">Cakeseable App</h2>
+                    <h5 class="mb-2 mb-lg-3">Responsive app and website</h5>
+                    <p class="mb-2 mb-lg-3 mb-lg-4">Cakeseable is a pastry app designed to make it easy for users to place orders and create custom cakes in a few simple steps.</p>
                     <a class="btn btn-primary" href="#" role="button">View Final Prototype</a>
                 </div>
                 <div class="flex-1">
@@ -43,7 +43,7 @@
     <main class="main">
         <section class="section py-5">
             <div class="container">
-                <div class="d-flex column-gap-7 mb-3">
+                <div class="d-flex flex-column flex-lg-row column-gap-7 row-gap-2-5 mb-2 mb-lg-3">
                     <div class="flex-1 flex-basis-25">
                         <h5>Roles & Responsabilities</h5>
                         <p><strong>UX research:</strong> user interviews personas, empathy mapping, problem statements, competitive audit, ideation, usability studies.</p>
@@ -59,11 +59,11 @@
                     </div>
                     <div class="flex-1">
                         <h5>Collaboration</h5>
-                        <p>Family and friends in the role of users</p>
+                        <p class="mb-0">Family and friends in the role of users</p>
                     </div>
                     <div class="flex-1">
                         <h5>Duration</h5>
-                        <p>4 weeks</p>
+                        <p class="mb-0">4 weeks</p>
                     </div>
                 </div>
                 <div>
@@ -89,11 +89,11 @@
         </div>
         <section class="section py-5" id="user-research">
             <div class="container">
-                <h3 class="mb-3">Understanding the user</h3>
-                <h4 class="mb-3">User research. Resume</h4>
-                <p class="mb-3">I interviewed users to understand their needs and design accordingly. A key group was seniors who struggled with online ordering and had mobility issues. While they confirmed some existing needs. The research also highlighted time constraints for custom cake orders.</p>
-                <h4 class="mb-3">Persona</h4>
-                <div class="text-center mb-3">
+                <h3 class="mb-2 mb-lg-3">Understanding the user</h3>
+                <h4 class="mb-2 mb-lg-3">User research. Resume</h4>
+                <p class="mb-2 mb-lg-3">I interviewed users to understand their needs and design accordingly. A key group was seniors who struggled with online ordering and had mobility issues. While they confirmed some existing needs. The research also highlighted time constraints for custom cake orders.</p>
+                <h4 class="mb-2 mb-lg-3">Persona</h4>
+                <div class="text-center mb-2 mb-lg-3">
                     <img class="img-fluid" src="/images/cakeseable/persona.png" alt="Persona">
                 </div>
                 <div class="text-center">
@@ -104,40 +104,40 @@
         <section class="section py-5" id="wireframes">
             <div class="container">
                 <div class="mb-6">
-                    <h3 class="mb-3">Starting the design</h3>
-                    <h4 class="mb-3">Digital wireframes</h4>
-                    <p class="mb-4">As the initial design phase progressed, I made sure to base the screen designs on the feedback and findings from user research.</p>
-                    <a class="btn btn-primary" href="#" role="button">View lo-fi prototype</a>
+                    <h3 class="mb-2 mb-lg-3">Starting the design</h3>
+                    <h4 class="mb-2 mb-lg-3">Digital wireframes</h4>
+                    <p class="mb-3 mb-lg-4">As the initial design phase progressed, I made sure to base the screen designs on the feedback and findings from user research.</p>
+                    <a class="btn btn-primary mb-0 mb-lg-4" href="#" role="button">View lo-fi prototype</a>
                 </div>
-                <div class="d-flex column-gap-3 mb-5 text-center">
-                    <div class="d-flex flex-column justify-content-between flex-1">
-                        <span></span>
+                <div class="d-flex flex-column flex-lg-row column-gap-3 mb-5 text-center">
+                    <div class="d-none d-lg-flex flex-column justify-content-between flex-1">
+                        <span class="d-none d-lg-block"></span>
                         <strong class="text-start">Users can access the sweet category of their choice.</strong>
-                        <strong class="mb-7 text-start">This button allows the user to quickly and easily customize their cake.</strong>
+                        <strong class="mb-2-5 mb-lg-7 text-start">This button allows the user to quickly and easily customize their cake.</strong>
                     </div>
                     <div class="flex-1">
                         <img class="img-fluid" src="/images/cakeseable/home-lo-fi.png" alt="Lo-fi prototype">
                     </div>
-                    <strong class="flex-1 mt-7 text-start">Clicking on the image gives users quick access to the store's new arrivals.</strong>
+                    <strong class="flex-1 mt-0 mt-lg-7 text-start">Clicking on the image gives users quick access to the store's new arrivals.</strong>
                 </div>
                 <p class="mb-5">Simple navigation was a crucial requirement for users that needed to be addressed in the designs, in addition to making the app compatible with assistive technologies for accessibility.</p>
                 <div class="d-flex column-gap-3 text-center">
-                    <div class="d-flex flex-column justify-content-between flex-1">
+                    <div class="d-none d-lg-flex flex-column justify-content-between flex-1">
                         <span></span>
                         <strong class="text-start">Dropdown menu accessible to screen reader users.</strong>
-                        <strong class="mb-7 text-start">Easy language switching access.</strong>
+                        <strong class="mb-2-5 mb-lg-7 text-start">Easy language switching access.</strong>
                     </div>
                     <div class="flex-1">
                         <img class="img-fluid" src="/images/cakeseable/menu.png" alt="Opened menu in lo-fi prototype">
                     </div>
-                    <div class="flex-1"></div>
+                    <div class="flex-1 d-none d-lg-block"></div>
                 </div>
             </div>
         </section>
         <section class="section py-5" id="usability-study">
             <div class="container">
-                <h4 class="mb-3">Usability study. Findings</h4>
-                <p class="mb-7">I conducted two rounds of usability testing. Findings from the first study informed the design evolution from paper and digital wireframes to mockups. The second study, conducted with a high-fidelity prototype, revealed areas for improvement in the mockups.</p>
+                <h4 class="mb-2 mb-lg-3">Usability study. Findings</h4>
+                <p class="mb-2-5 mb-lg-7">I conducted two rounds of usability testing. Findings from the first study informed the design evolution from paper and digital wireframes to mockups. The second study, conducted with a high-fidelity prototype, revealed areas for improvement in the mockups.</p>
                 <div class="findings">
                     <div class="findings-item">
                         <div class="findings-icon-rounded">
@@ -172,7 +172,7 @@
                         <p class="mb-0">30-50 minutes</p>
                     </div>
                 </div>
-                <div class="d-flex column-gap-3">
+                <div class="d-flex flex-column flex-lg-row column-gap-3 row-gap-3">
                     <div class="flex-1">
                         <h4 class="mb-2">Findings from the first round:</h4>
                         <ol>
@@ -193,12 +193,12 @@
         <section class="section py-5" id="mockups">
             <div class="container">
                 <div class="mb-6">
-                    <h4 class="mb-3">Mockups</h4>
-                    <p class="mb-3">While the first designs offered some personalization, post-usability testing, I introduced additional features like unregistered access to the app.</p>
+                    <h4 class="mb-2 mb-lg-3">Mockups</h4>
+                    <p class="mb-2-5 mb-lg-3">While the first designs offered some personalization, post-usability testing, I introduced additional features like unregistered access to the app.</p>
                     <a class="btn btn-primary" href="#" role="button">View hi-fi prototype</a>
                 </div>
-                <div class="d-flex flex-wrap flex-wrap gap-4 justify-content-center mb-7">
-                    <div class="flex-1"></div>
+                <div class="d-flex flex-wrap flex-wrap gap-2 gap-lg-4 justify-content-center mb-7">
+                    <div class="flex-1 d-none d-lg-block"></div>
                     <div class="d-flex flex-column row-gap-2">
                         <div class="flex-1 flex-basis-25">
                             <img class="mockup-image img-fluid" src="/images/cakeseable/register-lo-fi.png" alt="Lo-fi prototype">
@@ -215,14 +215,14 @@
                             <img class="mockup-image img-fluid" src="/images/cakeseable/product.png" alt="Hi-fi prototype">
                         </div>
                     </div>
-                    <div class="d-flex flex-column flex-1 justify-content-between">
+                    <div class="d-none d-lg-flex flex-column flex-1 justify-content-between">
                         <span class="mt-7">Users can log in as guests.</span>
                         <span class="mt-7">Add to favorites button.</span>
                         <span class="mb-5">Users can add products to their favorites list.</span>
                     </div>
                 </div>
-                <h4 class="mb-3">Main user journey</h4>
-                <div class="d-flex flex-wrap flex-wrap gap-4 justify-content-center">
+                <h4 class="mb-2 mb-lg-3">Main user journey</h4>
+                <div class="d-flex flex-wrap flex-wrap gap-2 gap-lg-4 justify-content-center">
                     <img class="mockup-image img-fluid flex-1" src="/images/cakeseable/product.png" alt="Product">
                     <img class="mockup-image img-fluid flex-1" src="/images/cakeseable/buying.png" alt="Cart">
                     <img class="mockup-image img-fluid flex-1" src="/images/cakeseable/products-resume.png" alt="Product">
@@ -232,8 +232,8 @@
         </section>
         <section class="section py-5" id="accessibility">
             <div class="container">
-                <h4 class="mb-3">Accessibility considerations</h4>
-                <ol class="w-50">
+                <h4 class="mb-2 mb-lg-3">Accessibility considerations</h4>
+                <ol class="w-lg-50">
                     <li>
                         Clear labels to facilitate screen reader interpretation of interactive elements.
                     </li>
@@ -245,17 +245,17 @@
         </section>
         <section class="section py-5">
             <div class="container">
-                <h4 class="mb-3">Takeways</h4>
-                <div class="d-flex column-gap-7">
+                <h4 class="mb-2 mb-lg-3">Takeways</h4>
+                <div class="d-flex flex-column flex-lg-row column-gap-7 row-gap-2-5">
                     <div class="flex-1">
-                        <p><strong>Impact:</strong> The app allows users to quickly and easily access Santander's cultural
+                        <p class="mb-0"><strong>Impact:</strong> The app allows users to quickly and easily access Santander's cultural
                             programming, share their favorite activities, save events of interest, and be redirected to the
                             official website to purchase tickets. As one user put it: “The app made it super easy to find a
                             fun event for the weekend! I definitely recommend Cakeseable to everyone who wants to stay up-to-date
                             on Santander's leisure activities”.</p>
                     </div>
                     <div class="flex-1">
-                        <p><strong>What I learned:</strong> While designing the Cakeseable app, I learned that initial ideas are
+                        <p class="mb-0"><strong>What I learned:</strong> While designing the Cakeseable app, I learned that initial ideas are
                             just the starting point. Usability studies and user feedback influenced every version of the
                             designs, and it's an ongoing process of improvement.</p>
                     </div>
