--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="d-flex flex-column-reverse flex-lg-row">
                     <div class="flex-1">
                         <h3 class="h2 mb-2">Sango</h3>
-                        <p class="mb-4">Find out when and where to do what you love. Easily plan your schedule, save your favorite events, and quickly find what you need.</p>
+                        <p class="mb-3 mb-lg-4">Find out when and where to do what you love. Easily plan your schedule, save your favorite events, and quickly find what you need.</p>
                         <a class="btn btn-primary" href="./projects/sango.html" role="button">View case study</a>
                     </div>
                     <div class="flex-1">
@@ -52,7 +52,7 @@
                 <div class="d-flex flex-column-reverse flex-lg-row">
                     <div class="flex-1">
                         <h3 class="h2 mb-2">Vetsanmascotas</h3>
-                        <p class="mb-4">Your veterinary clinic now closer to you. Get to know our services and team and register your pet to keep track of their care.</p>
+                        <p class="mb-3 mb-lg-4">Your veterinary clinic now closer to you. Get to know our services and team and register your pet to keep track of their care.</p>
                         <a class="btn btn-primary" href="./projects/vetsan.html" role="button">View case study</a>
                     </div>
                     <div class="flex-1">
@@ -62,7 +62,7 @@
                 <div class="d-flex flex-column-reverse flex-lg-row">
                     <div class="flex-1">
                         <h3 class="h2 mb-2">Cakeseable</h3>
-                        <p class="mb-4">Creative pastry is at your fingertips. Design unique cakes, have them delivered to your home and surprise your loved ones.</p>
+                        <p class="mb-3 mb-lg-4">Creative pastry is at your fingertips. Design unique cakes, have them delivered to your home and surprise your loved ones.</p>
                         <a class="btn btn-primary" href="./projects/cakeseable.html" role="button">View case study</a>
                     </div>
                     <div class="flex-1">
