Add links to hi-fi prototypes

--- a/projects/sango.html
+++ b/projects/sango.html
@@ -252,7 +252,7 @@
                     <h4 class="mb-2 mb-lg-3">Mockups</h4>
                     <p class="mb-2-5 mb-lg-3">After conducting a usability study, I made design modifications in accordance with user preferences
                         and introduced a new reminder function.</p>
-                    <a class="btn btn-primary" href="#" role="button">View hi-fi prototype</a>
+                    <a class="btn btn-primary" href="https://www.figma.com/proto/VlEGvhBhZXGFaIgOb3bMEt/SanGo?node-id=41-107&t=b2CIDzRcper2ENQ8-1" role="button">View hi-fi prototype</a>
                 </div>
                 <div class="d-flex flex-wrap flex-wrap gap-4 justify-content-center mb-4">
                     <div class="d-flex flex-column row-gap-2">
