--- a/projects/vetsan.html
+++ b/projects/vetsan.html
@@ -156,7 +156,7 @@
                 <div class="mb-6">
                     <h4 class="mb-2 mb-lg-3">Mockups</h4>
                     <p class="mb-2 mb-lg-3">Following usability studies, I gave more visibility to the “register your pet” section and added another section for “health plans” so that users can also add them to reminders.</p>
-                    <a class="btn btn-primary" href="#" role="button">View hi-fi prototype</a>
+                    <a class="btn btn-primary" href="https://www.figma.com/proto/h9bXyUVDl4jPok7LiDpVvl/Vetsans.com?t=b2CIDzRcper2ENQ8-1" role="button">View hi-fi prototype</a>
                 </div>
                 <div class="d-flex flex-wrap flex-wrap gap-4 justify-content-center mb-4">
                     <div class="d-flex flex-column row-gap-2">
