--- a/projects/cakeseable.html
+++ b/projects/cakeseable.html
@@ -195,7 +195,7 @@
                 <div class="mb-6">
                     <h4 class="mb-2 mb-lg-3">Mockups</h4>
                     <p class="mb-2-5 mb-lg-3">While the first designs offered some personalization, post-usability testing, I introduced additional features like unregistered access to the app.</p>
-                    <a class="btn btn-primary" href="#" role="button">View hi-fi prototype</a>
+                    <a class="btn btn-primary" href="https://www.figma.com/proto/7UzRG3IFcDi1e4xf8218Vf/Cakeseable-(Copy-1)?node-id=337-303&t=b2CIDzRcper2ENQ8-1" role="button">View hi-fi prototype</a>
                 </div>
                 <div class="d-flex flex-wrap flex-wrap gap-2 gap-lg-4 justify-content-center mb-7">
                     <div class="flex-1 d-none d-lg-block"></div>
