Add lo-fi and final prototype links

--- a/projects/sango.html
+++ b/projects/sango.html
@@ -38,7 +38,7 @@
                         experience. It boasts a responsive web design that prioritizes
                         accessibility.
                     </p>
-                    <a class="btn btn-primary" href="#" role="button">View Final Prototype</a>
+                    <a class="btn btn-primary" href="https://www.figma.com/proto/VlEGvhBhZXGFaIgOb3bMEt/SanGo?node-id=41-107&t=b2CIDzRcper2ENQ8-1" role="button">View Final Prototype</a>
                 </div>
                 <div class="flex-1">
                     <img class="img-fluid" src="/images/sango/app-image.png" alt="Sango App overview">
@@ -184,7 +184,7 @@
                         My primary focus was on improving the visibility and discoverability of events within the app. Once
                         I had some rough sketches on paper, I started designing the app. The main goal was to make it easy
                         for users to browse events by category.</p>
-                    <a class="btn btn-primary mb-0 mb-lg-4" href="#" role="button">View lo-fi prototype</a>
+                    <a class="btn btn-primary mb-0 mb-lg-4" href="https://www.figma.com/proto/VlEGvhBhZXGFaIgOb3bMEt/SanGo?t=Q8Fz7UviCjnA5Iv0-1" role="button">View lo-fi prototype</a>
                 </div>
                 <div class="text-center">
                     <img class="img-fluid" src="/images/sango/lo-fi-prototype.png" alt="Lo-fi prototype">
