--- a/projects/vetsan.html
+++ b/projects/vetsan.html
@@ -34,7 +34,7 @@
                     <p class="mb-2 mb-lg-3 mb-lg-4">
                         A responsive website that allows veterinary clinic users vetsanmascotas to register their pets to stay up-to-date on their vaccinations and deworming, keeping a convenient and simple control of their health.
                     </p>
-                    <a class="btn btn-primary" href="#" role="button">View Final Prototype</a>
+                    <a class="btn btn-primary" href="https://www.figma.com/proto/h9bXyUVDl4jPok7LiDpVvl/Vetsans.com?t=b2CIDzRcper2ENQ8-1" role="button">View Final Prototype</a>
                 </div>
                 <div class="flex-1">
                     <img class="img-fluid" src="/images/vetsan/vetsan-template.png" alt="vetsan App overview">
@@ -132,7 +132,7 @@
                     <h3 class="mb-2 mb-lg-3">Starting the design</h3>
                     <h4 class="mb-2 mb-lg-3">Digital wireframes</h4>
                     <p class="mb-3 mb-lg-4">I designed a pet registration form. The medical history is updated at the clinic with each visit, and the user can view it from their account to stay up-to-date on their pet's vaccinations and deworming.</p>
-                    <a class="btn btn-primary mb-0 mb-lg-4" href="#" role="button">View lo-fi prototype</a>
+                    <a class="btn btn-primary mb-0 mb-lg-4" href="https://www.figma.com/proto/h9bXyUVDl4jPok7LiDpVvl/Vetsans.com?node-id=107-909&t=Q8Fz7UviCjnA5Iv0-1" role="button">View lo-fi prototype</a>
                 </div>
                 <p class="mb-3">The diagrams illustrate the pet registration process</p>
                 <div class="d-flex flex-column flex-lg-row row-column-gap-3 mb-3 text-center">
