--- a/projects/cakeseable.html
+++ b/projects/cakeseable.html
@@ -32,7 +32,7 @@
                     <h2 class="h1 mb-0 mb-lg-1">Cakeseable App</h2>
                     <h5 class="mb-2 mb-lg-3">Responsive app and website</h5>
                     <p class="mb-2 mb-lg-3 mb-lg-4">Cakeseable is a pastry app designed to make it easy for users to place orders and create custom cakes in a few simple steps.</p>
-                    <a class="btn btn-primary" href="#" role="button">View Final Prototype</a>
+                    <a class="btn btn-primary" href="https://www.figma.com/proto/7UzRG3IFcDi1e4xf8218Vf/Cakeseable-(Copy-1)?node-id=337-303&t=b2CIDzRcper2ENQ8-1" role="button">View Final Prototype</a>
                 </div>
                 <div class="flex-1">
                     <img class="img-fluid" src="/images/cakeseable/cakeseable-app.png" alt="Cakeseable App overview">
@@ -107,7 +107,7 @@
                     <h3 class="mb-2 mb-lg-3">Starting the design</h3>
                     <h4 class="mb-2 mb-lg-3">Digital wireframes</h4>
                     <p class="mb-3 mb-lg-4">As the initial design phase progressed, I made sure to base the screen designs on the feedback and findings from user research.</p>
-                    <a class="btn btn-primary mb-0 mb-lg-4" href="#" role="button">View lo-fi prototype</a>
+                    <a class="btn btn-primary mb-0 mb-lg-4" href="https://www.figma.com/proto/7UzRG3IFcDi1e4xf8218Vf/Cakeseable-(Copy-1)?node-id=0-1&t=Q8Fz7UviCjnA5Iv0-1" role="button">View lo-fi prototype</a>
                 </div>
                 <div class="d-flex flex-column flex-lg-row column-gap-3 mb-5 text-center">
                     <div class="d-none d-lg-flex flex-column justify-content-between flex-1">
