--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/css/style.css">
     <title>Elsa Quintana's portfolio</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PF3XLQ7XGH"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-PF3XLQ7XGH');
+    </script>
 </head>
 <body>
     <div class="navbar navbar-home">
