Add GA to all the pages

--- a/projects/sango.html
+++ b/projects/sango.html
@@ -8,6 +8,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/src/css/style.css">
     <title>Sango | Elsa Quintana's portfolio</title>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-PF3XLQ7XGH');
+    </script>
 </head>
 <body class="project-sango">
     <div class="navbar">
