--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
                 <p>My path into UX design doesn't start in a conventional way at all. I've worked in various environments, from the kitchen to healthcare, and in each one I discovered the importance of empathy, attention to detail, and the search for creative solutions. However, it was my time in the workplace that really helped me find my calling. In each of these jobs, I took the opportunity to improve the lives of the people around me and in each one I discovered the importance of the user experience.</p>
                 <p class="mb-2-5 mb-lg-4">That's when I decided to embark on this exciting journey into UX design, when I realized that this discipline allowed me to combine my passion for creativity, my interest in people and my desire to make the world a better place. I've always believed that beauty lies in simplicity and in this increasingly complex world, my goal is to create intuitive, accessible user experiences that make life easier and more enjoyable for everyone.</p>
                 <div class="text-center">
-                    <a class="btn btn-primary" href="./downloads/CV UX.pdf">Download Resume</a>
+                    <a class="btn btn-primary" href="./downloads/Elsa Quintana Resume.pdf">Download Resume</a>
                 </div>
             </div>
             <div class="d-flex flex-1">
